Modification suite à une faute d'orthographe

--- a/test/generator/index.html
+++ b/test/generator/index.html
@@ -140,9 +140,9 @@
 		function calculParcours(){
 			distanceParcourue += vitesse;
 			distanceAParcourir -= vitesse;
-			distanceTotal += vitesse;
+			distanceTotale += vitesse;
 			socket.emit('distanceParcourue', distanceParcourue);
-			socket.emit('recordDistanceTotale', distanceTotal);
+			socket.emit('recordDistanceTotale', distanceTotale);
 			if(distanceAParcourir <= 0){
 				window.clearInterval(intervalVitesse);
 				socket.emit('message', 'INFO : Le parcours est terminé, félicitation !');
