--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,9 @@
         <script src="js/sb-admin-2.js"></script>
     <!-- endbuild -->
 
-
+    <!-- script pour google map -->
+        <script src="//maps.google.com/maps/api/js"></script>
+        <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 
     <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
