--- a/app/scripts/directives/dashboard/stats/stats.html
+++ b/app/scripts/directives/dashboard/stats/stats.html
@@ -11,12 +11,12 @@
                 </div>
             </div>
         </div>
-        <a href="#">
+        <!--<a href="#">
             <div class="panel-footer">
                 <span class="pull-left">View Details</span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                 <div class="clearfix"></div>
             </div>
-        </a>
+        </a>-->
     </div>
 </div>
