--- a/app/scripts/directives/header/header-notification/header-notification.html
+++ b/app/scripts/directives/header/header-notification/header-notification.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-top-links navbar-right">
-    <li class="dropdown">
+    <!--<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
@@ -46,10 +46,9 @@
                     <i class="fa fa-angle-right"></i>
                 </a>
             </li>
-        </ul>
-        <!-- /.dropdown-messages -->
-    </li>
-    <!-- /.dropdown -->
+        </ul>-->
+        <!-- /.dropdown-messages --> 
+    <!--</li>
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -126,9 +125,7 @@
                 </a>
             </li>
         </ul>
-        <!-- /.dropdown-tasks -->
     </li>
-    <!-- /.dropdown -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -186,9 +183,7 @@
                 </a>
             </li>
         </ul>
-        <!-- /.dropdown-alerts -->
-    </li>
-    <!-- /.dropdown -->
+    </li> -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
